# chatapp-rs

./: .gitignore  .pre-commit-config.yaml  cliff.toml  index.html  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.vue  main.js  tailwind.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/fixtures/: config.default.yml
src/assets/: styles.css
src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
src/router/: index.js
src/store/: index.js
src/views/: Login.vue  Register.vue
