[package]
name = "chatapp"
version = "0.1.0"
description = "Chat App"
authors = ["wulawulu"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
dirs = "6.0.0"
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2.4.0", features = ["colored"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-window-state = "2.2.2"
tracing = { version = "0.1.41", features = ["log"] }
